instagram link added

--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
         </div>
         <div class="social-media">
           <div class="icon">
-            <i class="bi bi-facebook"></i>
-            <i class="bi bi-messenger"></i>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-envelope-at-fill"></i>
+            <!-- <i class="bi bi-facebook"></i> -->
+            <!-- <i class="bi bi-messenger"></i> -->
+            <a href="https://www.instagram.com/purnima_dreamlife"
+              ><i class="bi bi-instagram"></i
+            ></a>
+            <!-- <i class="bi bi-envelope-at-fill"></i> -->
           </div>
           <div class="social-text">
             <i class="bi bi-arrow-left"></i>connect with me
