--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <div class="col-12 col-md-6 circle-img">
             <div class="my-image">
-              <img src="./image/parvin-aktar.jpg" alt="" />
+              <img src="./image/Parvin-aktar-new.jpg" alt="" />
             </div>
           </div>
         </div>
